# annotation-utils

./: .flake8  .gitignore  README.md  pyproject.toml
src/annotation_utils/: __init__.py
src/annotation_viewer/mscoco_preview/: mscoco_preview.py
