[project]
name = "annotation-utils"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shunsaku Endo", email = "endo@apto.co.jp" }
]
dependencies = [
    "pycocotools>=2.0.8",
    "matplotlib>=3.9.1",
    "black>=24.4.2",
    "flake8>=7.1.0",
    "isort>=5.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/annotation_utils"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
